Fix the path of Chrome shortcuts from the installer.

With this CL, the installer looks for shortcuts with a target path that
starts with the install directory and ends with *chrome.exe. It updates
all these shortcuts to point to the correct Chrome executable.

This will fix shortcuts broken by https://codereview.chromium.org/1666363002/,
which have a path that looks like this:
C:\Users\<user>\AppData\Local\Google\Chrome SxS\Temp\scoped_dir_<x>\new_chrome.exe

R=gab@chromium.org,grt@chromium.org
BUG=592040

Review URL: https://codereview.chromium.org/1780693002

Cr-Commit-Position: refs/heads/master@{#380405}

Former-commit-id: ff323ec5588d6e61a4267ab32251cf2310c84533